Get rid of Lombok #251 (#300)